--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <ol>
     <li><a href="/201tresfrases.php">Enlace al primer ejercicio</a></li>
     <li><a href="/202calculos.php">Enlace al segundo ejercicio</a></li>
+    <li><a href="/206anyos.php?edad=36">Enlace al sexto ejercicio</a></li>
+    <li><a href="/225formulario.html">Enlace al vigesimoquinto ejercicio</a></li>
 </ol>
 
 <h2>Funciones auxiliares</h2>
